projekt-compiler/test/builtInCommand/list/fail/e_append.rail
$'main'(--):
 \
  \
   \
    \---[Hello]--p---#


Crash: Stack Underflow